# test-lstm-pytorch

./: .gitignore  CMakeLists.txt  README.md  packed_test.py  rnn_test.cpp  rnn_test.py  test_unpacked_lstm.py
